--- a/src/components/about/vision-hdbank/style.sass
+++ b/src/components/about/vision-hdbank/style.sass
@@ -30,7 +30,24 @@
             .swiper-button:hover
                 background: none
     @media (max-width: 768.98px) and ( min-width: 320px )
+        padding-bottom: 0
         .vision-mission-box
             margin: 24px auto
             .swiper-vision-mission
-            .item-vision
+                .item-vision
+                    .item-title
+                        font-size: 22px
+                        line-height: 32.14px
+                    .info-box
+                        margin-top: 16px
+                        max-height: 185px
+                        p
+                            font-size: 18px
+                            letter-spacing: 0.01em
+                            line-height: 26.3px
+                .swiper-button-next
+                    right: 0px !important
+                    top: 24px !important
+                .swiper-button-prev
+                    left: 0px !important
+                    top: 24px !important
