--- a/src/components/home/h-1/h-1.sass
+++ b/src/components/home/h-1/h-1.sass
@@ -45,6 +45,9 @@
 			text-align: center
 			.icon
 				margin-bottom: 12px
+				max-width: 170px
+				width: 100%
+				min-height: 85px
 			.content
 				padding: 0 30px
 				p
