--- a/src/components/priority-user/banner/style.sass
+++ b/src/components/priority-user/banner/style.sass
@@ -64,19 +64,36 @@
 					@media ( max-width: 575.98px )
 						width: 10px
 						height: 10px
-	@media ( max-width: 575.98px )
+	// @media ( max-width: 575.98px )
+	// 	.hero-image
+	// 		width: 100%
+	// 		height: 100vh
+	// 		a
+	// 			+img-ratio(328/423)
+	// 			height: 100%
+	// @media ( max-width: 1366px )
+	// 	.hero-image
+	// 		width: 100%
+	// 		height: 100vh
+	// 		a
+	// 			height: 100%
+	@media ( max-width: 1366.98px )
 		.hero-image
 			width: 100%
-			height: 100vh
 			a
-				+img-ratio(328/423)
 				height: 100%
-	@media ( max-width: 1366px )
+				img
+					width: 100%
+					height: 100%
+	@media screen and ( max-width: 768.98px )
 		.hero-image
-			width: 100%
-			height: 100vh
 			a
-				height: 100%
+				+img-ratio(645/768)
+	@media screen and ( max-width: 575.98px )
+		.hero-image
+			height: 100%
+			a
+				+img-ratio(645/575)
 
 @keyframes scrolling
 	0%
