--- a/src/components/detail-card/detail/index.pug
+++ b/src/components/detail-card/detail/index.pug
@@ -9,22 +9,23 @@ section.section.card-detail
                 a.btn-login 
                     p Đăng ký ngay
             .wrapper-detail_content
-                table 
-                    tr 
-                        td Tính năng nổi bật
-                        td Miễn phí toàn bộ trong năm đầu tiên
-                    tr 
-                        td Lãi suất
-                        td Hưởng lãi suất theo lãi suất không kỳ hạn của Tài khoản thanh toán trong từng thời kỳ
-                    tr 
-                        td Hạn mức
-                        td 
+                ul 
+                    li 
+                        p Tính năng nổi bật
+                        p Miễn phí toàn bộ trong năm đầu tiên
+                    li 
+                        p Lãi suất
+                        p Hưởng lãi suất theo lãi suất không kỳ hạn của Tài khoản thanh toán trong từng thời kỳ
+                    li 
+                        p Hạn mức
+                        p 
                             span 50.000.000 VNĐ/ngày
-                    tr 
-                        td Phí duy trì
-                        td 
+                    li 
+                        p Phí duy trì
+                        p 
                             span 25.000 VNĐ/tháng 
+                            br 
                             |kể từ năm thứ 2
-                    tr 
-                        td Biểu phí và điều kiện
-                        td Chương trình điểm thưởng
+                    li 
+                        a(href="")  Biểu phí và điều kiện
+                        a(href="")  Chương trình điểm thưởng
