--- a/src/components/detail-card/list-col/index.pug
+++ b/src/components/detail-card/list-col/index.pug
@@ -1,8 +1,9 @@
-section.section.loan-block
-    .loan-list 
+section.section.loan-block.loan-card-detail
+    .loan-list.bg-pink 
         .loan-list_item 
             .loan-list_item__img 
-                img(src="./images/detail-card/ulitily.png", alt="")
+                img.desktop(src="./images/detail-card/ulitily.png", alt="")
+                img.mobile(src="./images/card-detail/star.png", alt="")
             .loan-list_item__content 
                 .loan-list_item__content-title
                     p Tiện ích
@@ -21,7 +22,8 @@ section.section.loan-block
                             p Thủ tục đơn giản và thời gian giải quyết hồ sơ nhanh chóng.
         .loan-list_item 
             .loan-list_item__img 
-                img(src="./images/detail-card/benefit.png", alt="")
+                img.desktop(src="./images/detail-card/benefit.png", alt="")
+                img.mobile(src="./images/card-detail/check.png", alt="")
             .loan-list_item__content 
                 .loan-list_item__content-title
                     p Lợi ích
@@ -42,7 +44,8 @@ section.section.loan-block
                             p Ân hạn gốc: lên đến 12 tháng.
         .loan-list_item 
             .loan-list_item__img 
-                img(src="./images/detail-card/document.png", alt="")
+                img.desktop(src="./images/detail-card/document.png", alt="")
+                img.mobile(src="./images/card-detail/document.png", alt="")
             .loan-list_item__content 
                 .loan-list_item__content-title
                     p Hồ sơ
