--- a/src/components/detail-loan/signup-loan/style.sass
+++ b/src/components/detail-loan/signup-loan/style.sass
@@ -92,7 +92,7 @@
                                 color: $main
                                 font-weight: 700
                     .btn-login
-                        width: 152px
+                        width: auto
                         margin: 0 auto
             &_hotline
                 background: #FFF9E2
