--- a/src/components/detail-loan/content/style.sass
+++ b/src/components/detail-loan/content/style.sass
@@ -1,5 +1,6 @@
 .loan-block
     padding-top: r(40px)
+
     .loan-list
         display: flex
         flex-direction: row
@@ -12,6 +13,9 @@
         background: #FFFFFF
         box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15)
         border-radius: 20px
+        &.bg-pink
+            background: #FFF9E2
+            box-shadow: none
         &_item
             display: flex
             align-items: center
