--- a/src/components/personal/per-2/index.pug
+++ b/src/components/personal/per-2/index.pug
@@ -5,10 +5,10 @@
 			li.navigation-list_item.active
 				.navigation-list_item__title
 					.img 
-						img.desktop(src="./images/producttion/main-product-0.png", alt="")
-						img.mobile(src="./images/producttion/main-pro-mb-0.png", alt="")
+						img.desktop(src="./images/personal/pro-1.png", alt="")
+						img.mobile(src="./images/personal/pro-1.png", alt="")
 					.contnet
-						a(href='') Vay kinh doanh
+						a(href='') Sản phẩm tiền gửi
 						em.lnr.lnr-chevron-down
 				ul.navigation-sub.show  
 					li
@@ -22,10 +22,10 @@
 			li.navigation-list_item
 				.navigation-list_item__title
 					.img 
-						img.desktop(src="./images/producttion/main-product-1.png", alt="")
-						img.mobile(src="./images/producttion/main-pro-mb-1.png", alt="")
+						img.desktop(src="./images/personal/pro-2.png", alt="")
+						img.mobile(src="./images/personal/pro-2.png", alt="")
 					.contnet
-						a(href='') Vay tiêu dùng
+						a(href='') Sản phẩm vay
 						em.lnr.lnr-chevron-down
 				ul.navigation-sub  
 					li
@@ -39,40 +39,33 @@
 			li.navigation-list_item
 				.navigation-list_item__title
 					.img 
-						img.desktop(src="./images/producttion/main-product-2.png", alt="")
-						img.mobile(src="./images/producttion/main-pro-mb-2.png", alt="")
+						img.desktop(src="./images/personal/pro-3.png", alt="")
+						img.mobile(src="./images/personal/pro-3.png", alt="")
 					.contnet
-						a(href='') Vay bằng sổ TK
+						a(href='') Sản phẩm thẻ
 						em.lnr.lnr-chevron-down
 			li.navigation-list_item
 				.navigation-list_item__title
 					.img 
-						img.desktop(src="./images/producttion/main-product-3.png", alt="")
-						img.mobile(src="./images/producttion/main-pro-mb-3.png", alt="")
+						img.desktop(src="./images/personal/pro-4.png", alt="")
+						img.mobile(src="./images/personal/pro-4.png", alt="")
 					.contnet
-						a(href='') Dịch vụ khác
+						a(href='') Ngân hàng điện tử
 						em.lnr.lnr-chevron-down
 			li.navigation-list_item
 				.navigation-list_item__title
 					.img 
-						img.desktop(src="./images/producttion/main-product-4.png", alt="")
-						img.mobile(src="./images/producttion/main-pro-mb-4.png", alt="")
+						img.desktop(src="./images/personal/pro-5.png", alt="")
+						img.mobile(src="./images/personal/pro-5.png", alt="")
 					.contnet
-						a(href='') Vay nông nghiệp
+						a(href='') Bảo hiểm
 						em.lnr.lnr-chevron-down
 			li.navigation-list_item
 				.navigation-list_item__title
 					.img 
-						img.desktop(src="./images/producttion/main-product-5.png", alt="")
-						img.mobile(src="./images/producttion/main-pro-mb-5.png", alt="")
+						img.desktop(src="./images/personal/pro-6.png", alt="")
+						img.mobile(src="./images/personal/pro-6.png", alt="")
 					.contnet
-						a(href='') Vay ô tô
+						a(href='') Sản phẩm dịch vụ
 						em.lnr.lnr-chevron-down
-			li.navigation-list_item
-				.navigation-list_item__title
-					.img 
-						img.desktop(src="./images/producttion/main-product-6.png", alt="")
-						img.mobile(src="./images/producttion/main-pro-mb-6.png", alt="")
-					.contnet
-						a(href='') Vay bất động sản
-						em.lnr.lnr-chevron-down
+			
