--- a/src/components/tabs/index.pug
+++ b/src/components/tabs/index.pug
@@ -1,7 +1,4 @@
 
-ul.tab-list.d-flex
+ul.tab-list-component.d-flex
     li.active(rel="panel-1") Title panel 1
     li(rel="panel-2") Title panel 2
-                            
-        
-
