--- a/src/components/home/h-2/h-2.sass
+++ b/src/components/home/h-2/h-2.sass
@@ -181,6 +181,7 @@
 		font-size: r(18px)
 		font-weight: 700
 		transition: all ease-in-out .3s
+		transform: translateY(-50%) rotate(0deg)
 	&:hover
 		background: $white
 		color: #000
