--- a/src/components/investor/banner/index.pug
+++ b/src/components/investor/banner/index.pug
@@ -1,8 +1,8 @@
-section.banner.banner-faq
+section.banner.banner-investor
     .banner-desktop
-        img(src="./images/faq/banner.png", alt="")
+        img(src="./images/investor/banner.png", alt="")
     .banner-mobile
-        img(src="./images/faq/banner-mb.png", alt="")
+        img(src="./images/investor/banner-mb.png", alt="")
     //- .left-info
     //-     h1.banner-title Câu hỏi thường gặp 
     //-     p.banner-description Tham khảo và tìm đáp án cho các câu hỏi thường gặp mà ngân hàng HDBank đã tổng hợp sẵn cho quý khách!
