--- a/src/components/_core/atomic.sass
+++ b/src/components/_core/atomic.sass
@@ -108,3 +108,13 @@
 .mobile
 	@media screen and ( min-width: 769px )
 		display: none
+.pink
+	background: radial-gradient(61.67% 61.67% at 42.5% 38.33%, #FFCCE1 0%, #FF1469 100%)
+	box-shadow: inset 0px 0px 5.61702px rgba(151, 1, 73, 0.25)
+.orange
+	background: radial-gradient(61.67% 61.67% at 42.5% 38.33%, #FFCF6C 0%, #FF7A00 100%)
+	box-shadow: inset 0px 0px 5.61702px rgba(118, 43, 10, 0.25)
+.purple
+	background: radial-gradient(61.67% 61.67% at 42.5% 38.33%, #F799FF 0%, #9E0EB6 100%)
+	box-shadow: inset 0px 0px 5.61702px rgba(118, 43, 10, 0.25)
+
