--- a/src/components/personal/per-2/index.pug
+++ b/src/components/personal/per-2/index.pug
@@ -12,9 +12,18 @@
 						em.lnr.lnr-chevron-down
 				ul.navigation-sub.show  
 					li
-						a(href="") 
+						a.navigation-list_item__title(href="") 
 							p Vay phát triển kinh tế gia đình
 							em.lnr.lnr-chevron-right
+						//- ul.nav-sub  
+						//- 	li
+						//- 		a.navigation-list_item__title(href="") 
+						//- 			p Vay phát triển kinh tế gia đình
+						//- 			em.lnr.lnr-chevron-right
+						//- 	li
+						//- 		a(href="") 
+						//- 			p Vay bổ sung vốn lưu động
+						//- 			em.lnr.lnr-chevron-right
 					li
 						a(href="") 
 							p Vay bổ sung vốn lưu động
