--- a/src/components/product-general/product-catelog/style.sass
+++ b/src/components/product-general/product-catelog/style.sass
@@ -114,10 +114,8 @@
 				.navigation
 					&-list
 						display: flex
-						flex-wrap: wrap
-						flex-direction: row
+						flex-direction: column
 						&_item
-							flex: 0 50%
 							padding: 0 8px
 							&__title
 								.img
@@ -142,8 +140,6 @@
 									& + li
 										margin-top: 8px
 										margin-bottom: 0
-							&:last-child
-								width: 50%
 						li + li
 							margin-top: 0
 							margin-bottom: 16px
