--- a/src/components/tabs/style.sass
+++ b/src/components/tabs/style.sass
@@ -25,7 +25,7 @@
         &.active:hover
             background: #F00020
 @media screen and ( max-width: 575.98px )
-    .tab-list
+    .tab-list-component
         margin-bottom: 16px
         li
             width: 50%
