--- a/src/pages/comparny.pug
+++ b/src/pages/comparny.pug
@@ -1,12 +1,22 @@
 extends _layout.pug
 
 block var
-	- var title = 'Sản phẩm bảo hiểm'
-	- var bodyClass = 'detail-insurance'
+	- var title = 'Doanh ngiệp'
+	- var bodyClass = 'comparny-page'
 
 block main
 	include ../components/breakcrumb/breakcrumb.pug
-	include ../components/detail-insurance/banner/index.pug
-	include ../components/detail-insurance/content/index.pug
-	include ../components/detail-insurance/promotion/index.pug
-	include ../components/detail-insurance/pro-related/index.pug
+	include ../components/comparny/banner/index.pug
+	include ../components/comparny/com-1/index.pug
+	section.section.tool-card-product
+		.container 
+			.product-catelogry
+				include ../components/personal/per-2/index.pug
+				include ../components/personal/per-3/index.pug
+	section.section.atm-location 
+		.container
+			.row 
+				.col-12.col-lg-12.col-xl-8 
+					include ../components/personal/branch/index.pug
+				.col-12.col-lg-12.col-xl-4
+					include ../components/personal/faq/index.pug
