--- a/src/pages/personal.pug
+++ b/src/pages/personal.pug
@@ -7,6 +7,7 @@ block var
 block main
 	include ../components/breakcrumb/breakcrumb.pug
 	include ../components/personal/banner/index.pug
+	include ../components/personal/per-1/index.pug
 	section.section.tool-card-product
 		.container 
 			.product-catelogry
