--- a/src/components/banner/banner.sass
+++ b/src/components/banner/banner.sass
@@ -13,14 +13,9 @@
 			&-active
 				background: $white
 	.hero-image
-		width: 100%
-		position: relative
-		height: 552px
-		display: block
-		img
-			width: 100%
-			height: 100%
-			object-fit: cover
+		+img-ratio(522/1440)
+		aspect-ratio: 8/3
+
 		.product-list-slide
 			position: absolute
 			bottom: 95px
@@ -123,18 +118,26 @@
 			max-width: 90vw
 	@media ( max-width: 1366.98px )
 		.hero-image
-			width: 100%
+			+img-ratio(552/1366)
+			aspect-ratio: 5/2
+	@media ( max-width: 1199.98px )
+		.hero-image
+			+img-ratio(552/1199)
+			aspect-ratio: 9/4
+	@media ( max-width: 992.98px )
+		.hero-image
+			+img-ratio(552/992)
+			aspect-ratio: 9/5
+	@media ( max-width: 1024.98px )
+		.hero-image
+			+img-ratio(552/1024)
+			aspect-ratio: 2/1
+
 	@media screen and ( max-width: 768.98px )
 		.hero-image
-			width: 100%
-			height: auto
-			a
-				width: 100%
-				height: 100%
-			img
-				width: 100%
-				height: 100%
-				object-fit: cover
+			+img-ratio(644/768)
+			aspect-ratio: 6/5
 	@media screen and ( max-width: 575.98px )
 		.hero-image
-			height: 690px
+			+img-ratio(644/375)
+			aspect-ratio: 3/5
