--- a/src/components/home/h-3/h-3.sass
+++ b/src/components/home/h-3/h-3.sass
@@ -216,6 +216,7 @@
 								color: $black
 								font-weight: 700
 						.btn-small
+
 							width: 90px
 							height: 23px
 							font-size: 10px
@@ -229,4 +230,5 @@
 							.desc
 								a
 									font-size: 10px
-
+	.btn-view-all
+		margin-top: 16px
