--- a/src/components/_core/button.sass
+++ b/src/components/_core/button.sass
@@ -163,9 +163,11 @@
 		color: $black
 		p
 			color: $black
-
-	@media screen and ( max-width: 991.98px )
+	@media screen and ( max-width: 1024.98px )
 		padding: 4px 8px
+		&::before
+			display: none
+	@media screen and ( max-width: 991.98px )
 		width: 107.5px
 		height: 23.25px
 		font-size: 12px
