--- a/src/components/home/h-3/h-3.sass
+++ b/src/components/home/h-3/h-3.sass
@@ -1,6 +1,9 @@
 .customer
 	margin-top: 24px
 	.block-desktop
+		max-width: 1240px
+		width: 100%
+		margin: 0 auto
 		.big-image
 			position: relative
 			margin-bottom: 18px
