--- a/src/components/personal/per-2/index.pug
+++ b/src/components/personal/per-2/index.pug
@@ -1,80 +1,401 @@
 .product-catelory_list
 	h2.title.title_small.title_small-white Danh mục sản phẩm
-	.navigation
-		ul.navigation-list
-			li.navigation-list_item.active
-				.navigation-list_item__title
+	#accordian
+		ul
+			li.active
+				.wrap-title
+					.content
+						a(href="") 
+							p Sản phẩm tiền gửi
+						em.lnr.lnr-chevron-down
 					.img 
 						img.desktop(src="./images/personal/pro-1.png", alt="")
 						img.mobile(src="./images/personal/pro-1.png", alt="")
-					.contnet
-						a(href='') Sản phẩm tiền gửi
-						em.lnr.lnr-chevron-down
-				ul.navigation-sub.show  
+				ul 
 					li
-						a.navigation-list_item__title(href="") 
-							p Vay phát triển kinh tế gia đình
-							em.lnr.lnr-chevron-right
-						//- ul.nav-sub  
-						//- 	li
-						//- 		a.navigation-list_item__title(href="") 
-						//- 			p Vay phát triển kinh tế gia đình
-						//- 			em.lnr.lnr-chevron-right
-						//- 	li
-						//- 		a(href="") 
-						//- 			p Vay bổ sung vốn lưu động
-						//- 			em.lnr.lnr-chevron-right
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
 					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+			li
+				.wrap-title
+					.content
 						a(href="") 
-							p Vay bổ sung vốn lưu động
-							em.lnr.lnr-chevron-right
-			li.navigation-list_item
-				.navigation-list_item__title
-					.img 
-						img.desktop(src="./images/personal/pro-2.png", alt="")
-						img.mobile(src="./images/personal/pro-2.png", alt="")
-					.contnet
-						a(href='') Sản phẩm vay
+							p Sản phẩm tiền gửi
 						em.lnr.lnr-chevron-down
-				ul.navigation-sub  
+					.img 
+						img.desktop(src="./images/personal/pro-1.png", alt="")
+						img.mobile(src="./images/personal/pro-1.png", alt="")
+				ul 
 					li
-						a(href="") 
-							p Vay phát triển kinh tế gia đình
-							em.lnr.lnr-chevron-right
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
 					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+			li
+				.wrap-title
+					.content
 						a(href="") 
-							p Vay bổ sung vốn lưu động
-							em.lnr.lnr-chevron-right
-			li.navigation-list_item
-				.navigation-list_item__title
-					.img 
-						img.desktop(src="./images/personal/pro-3.png", alt="")
-						img.mobile(src="./images/personal/pro-3.png", alt="")
-					.contnet
-						a(href='') Sản phẩm thẻ
+							p Sản phẩm tiền gửi
 						em.lnr.lnr-chevron-down
-			li.navigation-list_item
-				.navigation-list_item__title
 					.img 
-						img.desktop(src="./images/personal/pro-4.png", alt="")
-						img.mobile(src="./images/personal/pro-4.png", alt="")
-					.contnet
-						a(href='') Ngân hàng điện tử
+						img.desktop(src="./images/personal/pro-1.png", alt="")
+						img.mobile(src="./images/personal/pro-1.png", alt="")
+				ul 
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+			li
+				.wrap-title
+					.content
+						a(href="") 
+							p Sản phẩm tiền gửi
 						em.lnr.lnr-chevron-down
-			li.navigation-list_item
-				.navigation-list_item__title
 					.img 
-						img.desktop(src="./images/personal/pro-5.png", alt="")
-						img.mobile(src="./images/personal/pro-5.png", alt="")
-					.contnet
-						a(href='') Bảo hiểm
+						img.desktop(src="./images/personal/pro-1.png", alt="")
+						img.mobile(src="./images/personal/pro-1.png", alt="")
+				ul 
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+			li
+				.wrap-title
+					.content
+						a(href="") 
+							p Sản phẩm tiền gửi
 						em.lnr.lnr-chevron-down
-			li.navigation-list_item
-				.navigation-list_item__title
 					.img 
-						img.desktop(src="./images/personal/pro-6.png", alt="")
-						img.mobile(src="./images/personal/pro-6.png", alt="")
-					.contnet
-						a(href='') Sản phẩm dịch vụ
+						img.desktop(src="./images/personal/pro-1.png", alt="")
+						img.mobile(src="./images/personal/pro-1.png", alt="")
+				ul 
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+			li
+				.wrap-title
+					.content
+						a(href="") 
+							p Sản phẩm tiền gửi
 						em.lnr.lnr-chevron-down
+					.img 
+						img.desktop(src="./images/personal/pro-1.png", alt="")
+						img.mobile(src="./images/personal/pro-1.png", alt="")
+				ul 
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
+					li
+						.content
+							a(href="") 
+								p Tiền gửi thanh toán
+							em.lnr.lnr-chevron-down
+						ul
+							li
+								a(href="") 
+									p Vay phát triển kinh tế gia đình
+									em.lnr.lnr-chevron-right
+							li
+								a(href="") 
+									p Vay bổ sung vốn lưu động
+									em.lnr.lnr-chevron-right
 			
