--- a/src/pages/personal.pug
+++ b/src/pages/personal.pug
@@ -12,7 +12,7 @@ block main
 		.container 
 			.product-catelogry
 				include ../components/personal/per-2/index.pug
-				//- include ../components/personal/per-3/index.pug
+				include ../components/personal/per-3/index.pug
 	section.section.atm-location 
 		.container
 			.row 
